--- a/frontend/style.css
+++ b/frontend/style.css
@@ -133,7 +133,7 @@ table tr:hover {
 #stream img {
     display: block;
     margin-top: 15px;
-    max-width: 100%;
+    width: 80%;
     border-radius: 6px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
